fix alignment and remove install button from catalog

--- a/tutordash/server/static/scss/dash.scss
+++ b/tutordash/server/static/scss/dash.scss
@@ -353,11 +353,14 @@ body {
 				flex-direction: column;
 				.item {
 					display: flex;
-					margin-bottom: 2em;
+					margin-bottom: 1em;
 					align-items: center;
+					height: 3em;
 
-					span {
-						font-weight: bold;
+					div {
+						height: 100%;
+						font-weight: 600;
+						width: 25em;
 					}
 
 					input {
